WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117532
[CSS Blending] Gradient background layers don't blend with any of the layers behind
https://bugs.webkit.org/show_bug.cgi?id=117532
Summary
[CSS Blending] Gradient background layers don't blend with any of the layers ...
Mihai Tica
Reported
2013-06-12 01:51:19 PDT
When specifying background blending for an element with a background gradient and several other layers, the blending operation is not performed.
Attachments
Patch for review
(1.11 MB, patch)
2013-06-13 02:42 PDT
,
Mihai Tica
no flags
Details
Formatted Diff
Diff
BlendModeNormal was missing from the first test case
(1.01 MB, patch)
2013-06-13 02:51 PDT
,
Mihai Tica
no flags
Details
Formatted Diff
Diff
draft test file
(6.05 KB, text/html)
2013-06-27 09:51 PDT
,
Rik Cabanier
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mihai Tica
Comment 1
2013-06-13 02:42:14 PDT
Created
attachment 204563
[details]
Patch for review
Mihai Tica
Comment 2
2013-06-13 02:51:43 PDT
Created
attachment 204564
[details]
BlendModeNormal was missing from the first test case
Dirk Schulze
Comment 3
2013-06-13 07:44:47 PDT
Comment on
attachment 204564
[details]
BlendModeNormal was missing from the first test case LGTM. r=me.
WebKit Commit Bot
Comment 4
2013-06-13 08:05:36 PDT
Comment on
attachment 204564
[details]
BlendModeNormal was missing from the first test case Clearing flags on attachment: 204564 Committed
r151547
: <
http://trac.webkit.org/changeset/151547
>
WebKit Commit Bot
Comment 5
2013-06-13 08:05:39 PDT
All reviewed patches have been landed. Closing bug.
Ryosuke Niwa
Comment 6
2013-06-19 00:48:31 PDT
***
Bug 117772
has been marked as a duplicate of this bug. ***
Rik Cabanier
Comment 7
2013-06-27 09:51:37 PDT
Created
attachment 205614
[details]
draft test file
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug