[CSS Background Blending] Gradients don't blend with any of the layers behind. First, allow the layers behind opaque gradients to be drawn, then add the blending filters when working with gradients.

Source/WebCore:

https://bugs.webkit.org/show_bug.cgi?id=117532

Patch by Mihai Tica <mitica@adobe.com> on 2013-06-13
Reviewed by Dirk Schulze.

Tests: css3/compositing/background-blend-mode-gradient-color.html
       css3/compositing/background-blend-mode-gradient-gradient.html
       css3/compositing/background-blend-mode-gradient-image.html
       css3/compositing/background-blend-mode-multiple-background-layers.html

* platform/graphics/GeneratorGeneratedImage.cpp:
(WebCore::GeneratorGeneratedImage::draw):
* rendering/RenderBox.cpp:
(WebCore::RenderBox::paintFillLayers):

LayoutTests:

https://bugs.webkit.org/show_bug.cgi?id=117532
Patch by Mihai Tica <mitica@adobe.com> on 2013-06-13
Reviewed by Dirk Schulze.

* css3/compositing/background-blend-mode-gradient-color-expected.txt: Added.
* css3/compositing/background-blend-mode-gradient-color.html: Added.
* css3/compositing/background-blend-mode-gradient-gradient-expected.txt: Added.
* css3/compositing/background-blend-mode-gradient-gradient.html: Added.
* css3/compositing/background-blend-mode-gradient-image-expected.txt: Added.
* css3/compositing/background-blend-mode-gradient-image.html: Added.
* css3/compositing/background-blend-mode-multiple-background-layers-expected.txt: Added.
* css3/compositing/background-blend-mode-multiple-background-layers.html: Added.
* platform/mac/css3/compositing/background-blend-mode-gradient-color-expected.png: Added.
* platform/mac/css3/compositing/background-blend-mode-gradient-gradient-expected.png: Added.
* platform/mac/css3/compositing/background-blend-mode-gradient-image-expected.png: Added.
* platform/mac/css3/compositing/background-blend-mode-multiple-background-layers-expected.png: Added.

Canonical link: https://commits.webkit.org/135752@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151547 268f45cc-cd09-0410-ab3c-d52691b4dbfc